src/objects/Territory__c.object
<CustomObject>
    <description>Object for gathering accounts via Areas into a Territory and assigning them to the correct account manager</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Denotes if territory is active</description>
        <inlineHelpText>Tick if territory is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Enter description here</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Temporary_Owner__c</fullName>
        <description>Temp field for marking territory owners before users have been created - will be deleted prior to go live</description>
        <inlineHelpText>FIELD WILL BE DELETED AFTER USERS CREATED AND MAPPED</inlineHelpText>
        <label>Temporary Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Salesperson associated to territory</description>
        <inlineHelpText>Search for Salesperson associated to this territory</inlineHelpText>
        <label>Territory Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Denotes areas type relating to sales groups (key account, regional accounts)</description>
        <inlineHelpText>Select Sales group Kam, Ram etc.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Territory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>Territory_Manager__c</columns>
        <columns>Temporary_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>